# sdl-engine

./: CMakeLists.txt  README.md
src/: GameLoop.cpp  GameLoop.h  camera.h  components.h  engine.cpp  engine.h  event_handler.cpp  event_handler.h  keyboard.hpp  main.cpp  scheduler.cpp  scheduler.h  systems.cpp  systems.h  texture.cpp  texture.h  texture_registry.h  util.h  vector2d.h  video.cpp  video.h
